# nih-plug-bitcrash

./: Cargo.toml
plugins/bitcrasher/: Cargo.toml
plugins/bitcrasher/src/: editor.rs  editor.rs~  lib.rs  main.rs  main.rs~
